Configuring blog screen using Thymleaf