@@ -6,13 +6,17 @@ import org.springframework.web.bind.annotation.GetMapping;
 
 import java.time.LocalDateTime;
 import java.util.Arrays;
+import java.util.List;
 
 @Controller
 public class PageController {
     @GetMapping("/thymeleaf/example")
     public String thymeleafPage(Model model) {
         Person person = new Person();
-        person.setHobbies(Arrays.asList("여행", "조깅"));
+        person.setId(1L);
+        person.setName("노영재");
+        person.setAge(26);
+        person.setHobbies(List.of("운동", "노래"));
 
         model.addAttribute("person", person);
         model.addAttribute("today", LocalDateTime.now());
